# linux-commandcrafter

./: .dockerignore  .env.example  .gitignore  App.tsx  DEPLOY.md  Dockerfile  README.md  constants.ts  deploy.sh  docker-compose.yml  index.html  metadata.json  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh  tailwind.config.js  tsconfig.json  tutorials.ts  types.ts  vite.config.ts
builders/: index.ts  registry.ts
commandcrafter/: __init__.py  __main__.py  analyzer.py  commands.py  config.py  routes.py  sanitize.py  shell.py  tutorials.py
commandcrafter/builders/: __init__.py  ansible.py  base.py  bash.py  chmod.py  cron.py  ffmpeg.py  find.py  generic.py  git.py  grep.py  ip.py  lxc.py  rsync.py  scp.py  sed.py  ssh.py  ufw.py
commandcrafter/templates/: base.html  index.html
components/: Aliases.tsx  AnsibleBuilder.tsx  BashBuilder.tsx  CheckboxOption.tsx  ChmodBuilder.tsx  CommandAnalyzer.tsx  CommandBuilder.tsx  CommandList.tsx  CronBuilder.tsx  Favorites.tsx  FfmpegBuilder.tsx  FindBuilder.tsx  GeneratedCommand.tsx  GitBuilder.tsx  GrepBuilder.tsx  History.tsx  IpBuilder.tsx  LxcBuilder.tsx  RsyncBuilder.tsx  ScpBuilder.tsx  SedBuilder.tsx  SshBuilder.tsx  TabButton.tsx  Tutorials.tsx  UfwBuilder.tsx
components/shared/: FlagCheckbox.tsx  LabeledInput.tsx  index.ts
hooks/: useLocalStorage.ts
scripts/: install.sh  start.sh  stop.sh
static/css/: app.css
static/js/: app.js  storage.js  ui.js
tests/: test_builders.py  test_routes.py  test_sanitize.py  test_shell.py
utils/: sanitize.ts  shell.ts
(+25 files in other folders)
